VCC=../../utils/bin/vcc$(EXEEXT)
OUTDIR=../../basev/heretic/progs
COMMON_PROGS_DIR=../../basev/common/progs

noinst_DATA = $(OUTDIR)/svprogs.dat $(OUTDIR)/clprogs.dat

$(OUTDIR)/svprogs.dat: $(VCC) $(srcdir)/*.vc $(srcdir)/game/*.vc \
		$(COMMON_PROGS_DIR)/linespec.dat
	@mkdir -p $(OUTDIR)
	$(VCC) -P$(COMMON_PROGS_DIR) -P$(OUTDIR) $(srcdir)/svprogs.vc $@

$(OUTDIR)/clprogs.dat: $(VCC) $(OUTDIR)/svprogs.dat $(srcdir)/*.vc $(srcdir)/cgame/*.vc $(COMMON_PROGS_DIR)/uibase.dat
	$(VCC) -P$(COMMON_PROGS_DIR) -P$(OUTDIR) $(srcdir)/clprogs.vc $@

EXTRA_DIST = compile.bat \
	clprogs.vc \
	svprogs.vc \
	cgame/classes.vc \
	cgame/ClientGame.vc \
	cgame/FinaleScreen.vc \
	cgame/IntermissionScreen.vc \
	cgame/MenuChoice_Episode1.vc \
	cgame/MenuScreenAdvancedVideoOptions.vc \
	cgame/MenuScreenControls.vc \
	cgame/MenuScreenControls2.vc \
	cgame/MenuScreenEpisode.vc \
	cgame/MenuScreenHelp.vc \
	cgame/MenuScreenJoinGame.vc \
	cgame/MenuScreenLoadGame.vc \
	cgame/MenuScreenMain.vc \
	cgame/MenuScreenMouseOptions.vc \
	cgame/MenuScreenMultiplayer.vc \
	cgame/MenuScreenNewNetGame.vc \
	cgame/MenuScreenOptions.vc \
	cgame/MenuScreenPlayerSetup.vc \
	cgame/MenuScreenSaveGame.vc \
	cgame/MenuScreenScreenResolution.vc \
	cgame/MenuScreenSinglePlayer.vc \
	cgame/MenuScreenSkill.vc \
	cgame/MenuScreenSList.vc \
	cgame/MenuScreenSoundOptions.vc \
	cgame/MenuScreenVideoOptions.vc \
	cgame/MenuSelector_BigArrow.vc \
	cgame/StatusBarScreen.vc \
	cgame/TitleScreen.vc \
	game/ActivatedTimeBomb.vc \
	game/Actor.vc \
	game/AmbientSoundSequence.vc \
	game/ArtiEgg.vc \
	game/ArtiFly.vc \
	game/ArtiHealth.vc \
	game/ArtiInvisibility.vc \
	game/ArtiInvulnerability.vc \
	game/ArtiSuperHealth.vc \
	game/ArtiTeleport.vc \
	game/ArtiTimeBomb.vc \
	game/ArtiTomeOfPower.vc \
	game/ArtiTorch.vc \
	game/BagOfHolding.vc \
	game/Barrel.vc \
	game/Beak.vc \
	game/BeakPowered.vc \
	game/BeakPuff.vc \
	game/Beast.vc \
	game/BeastBall.vc \
	game/Blaster.vc \
	game/BlasterAmmo.vc \
	game/BlasterFX1.vc \
	game/BlasterHefty.vc \
	game/BlasterPowered.vc \
	game/BlasterPuff.vc \
	game/BlasterSmoke.vc \
	game/Blood.vc \
	game/BloodSplash.vc \
	game/BloodSplashBase.vc \
	game/BloodSplatter.vc \
	game/BloodySkull.vc \
	game/BossSpot.vc \
	game/BotPlayer.vc \
	game/BrownPillar.vc \
	game/BurnBall.vc \
	game/BurnBallFB.vc \
	game/Chandelier.vc \
	game/Chicken.vc \
	game/ChickenPlayer.vc \
	game/classes.vc \
	game/Clink.vc \
	game/Crossbow.vc \
	game/CrossbowAmmo.vc \
	game/CrossbowFX1.vc \
	game/CrossbowFX2.vc \
	game/CrossbowFX3.vc \
	game/CrossbowFX4.vc \
	game/CrossbowHefty.vc \
	game/CrossbowPowered.vc \
	game/CrystalVial.vc \
	game/Decoration.vc \
	game/Effect.vc \
	game/EggFX.vc \
	game/EnchantedShield.vc \
	game/Feather.vc \
	game/FireBrazier.vc \
	game/GauntletPuff1.vc \
	game/GauntletPuff2.vc \
	game/Gauntlets.vc \
	game/GauntletsPowered.vc \
	game/GoldWand.vc \
	game/GoldWandAmmo.vc \
	game/GoldWandFX1.vc \
	game/GoldWandFX2.vc \
	game/GoldWandHefty.vc \
	game/GoldWandPowered.vc \
	game/GoldWandPuff1.vc \
	game/GoldWandPuff2.vc \
	game/HangingCorpse.vc \
	game/HeadFX1.vc \
	game/HeadFX2.vc \
	game/HeadFX3.vc \
	game/HereticImp.vc \
	game/HereticImpBall.vc \
	game/HereticImpChunk1.vc \
	game/HereticImpChunk2.vc \
	game/HereticImpLeader.vc \
	game/HereticKey.vc \
	game/HereticLevelInfo.vc \
	game/HereticPlayer.vc \
	game/HereticSoundSequence1.vc \
	game/HereticSoundSequence2.vc \
	game/HereticSoundSequence3.vc \
	game/HereticSoundSequence4.vc \
	game/HereticSoundSequence5.vc \
	game/HereticSoundSequence6.vc \
	game/HereticSoundSequence7.vc \
	game/HereticSoundSequence8.vc \
	game/HereticSoundSequence9.vc \
	game/HereticSoundSequence10.vc \
	game/HereticWeapon.vc \
	game/HereticWorldInfo.vc \
	game/HornRodFX1.vc \
	game/HornRodFX2.vc \
	game/Ironlich.vc \
	game/KeyBlue.vc \
	game/KeyGizmoBlue.vc \
	game/KeyGizmoFloatBlue.vc \
	game/KeyGizmoFloatGreen.vc \
	game/KeyGizmoFloatYellow.vc \
	game/KeyGizmoGreen.vc \
	game/KeyGizmoYellow.vc \
	game/KeyGreen.vc \
	game/KeyYellow.vc \
	game/Knight.vc \
	game/KnightAxe.vc \
	game/KnightGhost.vc \
	game/LavaSmoke.vc \
	game/LavaSplash.vc \
	game/Mace.vc \
	game/MaceAmmo.vc \
	game/MaceFX1.vc \
	game/MaceFX2.vc \
	game/MaceFX3.vc \
	game/MaceFX4.vc \
	game/MaceHefty.vc \
	game/MacePowered.vc \
	game/MaceSpawner.vc \
	game/MainGameInfo.vc \
	game/Minotaur.vc \
	game/MinotaurFX1.vc \
	game/MinotaurFX2.vc \
	game/MinotaurFX3.vc \
	game/Moss1.vc \
	game/Moss2.vc \
	game/Mummy.vc \
	game/MummyFX1.vc \
	game/MummyGhost.vc \
	game/MummyLeader.vc \
	game/MummyLeaderGhost.vc \
	game/MummySoul.vc \
	game/Pawn.vc \
	game/PhoenixFX1.vc \
	game/PhoenixFX2.vc \
	game/PhoenixPuff.vc \
	game/PhoenixRod.vc \
	game/PhoenixRodAmmo.vc \
	game/PhoenixRodHefty.vc \
	game/PhoenixRodPowered.vc \
	game/Player.vc \
	game/PlayerPawn.vc \
	game/Pod.vc \
	game/PodGenerator.vc \
	game/PodGoo.vc \
	game/Projectile.vc \
	game/Puffy.vc \
	game/QuakeFocus.vc \
	game/RainPillar.vc \
	game/RainPlayer2.vc \
	game/RainPlayer3.vc \
	game/RainPlayer4.vc \
	game/RedAxe.vc \
	game/Ripper.vc \
	game/SerpentTorch.vc \
	game/SilverShield.vc \
	game/SkullHang35.vc \
	game/SkullHang45.vc \
	game/SkullHang60.vc \
	game/SkullHang70.vc \
	game/SkullRod.vc \
	game/SkullRodAmmo.vc \
	game/SkullRodHefty.vc \
	game/SkullRodPowered.vc \
	game/SlimeChunk.vc \
	game/SlimeSplash.vc \
	game/SludgeChunk.vc \
	game/SludgeSplash.vc \
	game/SmallPillar.vc \
	game/Snake.vc \
	game/SnakeProjA.vc \
	game/SnakeProjB.vc \
	game/Sorcerer1.vc \
	game/Sorcerer2.vc \
	game/Sorcerer2FX1.vc \
	game/Sorcerer2FX2.vc \
	game/Sorcerer2FXSpark.vc \
	game/Sorcerer2Telefade.vc \
	game/SorcererFX1.vc \
	game/SoundSequence.vc \
	game/SoundSequenceSlot.vc \
	game/SoundWaterfall.vc \
	game/SoundWind.vc \
	game/Staff.vc \
	game/StaffPowered.vc \
	game/StaffPuff.vc \
	game/StaffPuff2.vc \
	game/StalactiteLarge.vc \
	game/StalactiteSmall.vc \
	game/StalagmiteLarge.vc \
	game/StalagmiteSmall.vc \
	game/StaticLightSource.vc \
	game/StaticRGBLightSource.vc \
	game/SuperMap.vc \
	game/TeleGlitter1.vc \
	game/TeleGlitter2.vc \
	game/TeleGlitterGenerator1.vc \
	game/TeleGlitterGenerator2.vc \
	game/TeleportFog.vc \
	game/Volcano.vc \
	game/VolcanoBlast.vc \
	game/VolcanoTBlast.vc \
	game/WallTorch.vc \
	game/WaterSplash.vc \
	game/WaterSplashBase.vc \
	game/Whirlwind.vc \
	game/Wizard.vc \
	game/WizardFX1.vc

MOSTLYCLEANFILES = \
	$(OUTDIR)/shared.dat $(OUTDIR)/svprogs.dat $(OUTDIR)/clprogs.dat \
	$(OUTDIR)/shared.txt $(OUTDIR)/svprogs.txt $(OUTDIR)/clprogs.txt
