VCC=../../utils/bin/vcc$(EXEEXT)
OUTDIR=../../basev/hexen/progs
COMMON_PROGS_DIR=../../basev/common/progs

noinst_DATA = $(OUTDIR)/shared.dat $(OUTDIR)/svprogs.dat $(OUTDIR)/clprogs.dat

$(OUTDIR)/shared.dat: $(VCC) $(srcdir)/*.vc $(COMMON_PROGS_DIR)/engine.dat
	@mkdir -p $(OUTDIR)
	$(VCC) -P$(COMMON_PROGS_DIR) -P$(OUTDIR) $(srcdir)/hexndefs.vc $@

$(OUTDIR)/svprogs.dat: $(VCC) $(OUTDIR)/shared.dat $(srcdir)/*.vc $(srcdir)/game/*.vc \
		$(COMMON_PROGS_DIR)/linespec.dat
	$(VCC) -P$(COMMON_PROGS_DIR) -P$(OUTDIR) $(srcdir)/svprogs.vc $@

$(OUTDIR)/clprogs.dat: $(VCC) $(OUTDIR)/svprogs.dat $(srcdir)/*.vc $(srcdir)/cgame/*.vc
	$(VCC) -P$(COMMON_PROGS_DIR) -P$(OUTDIR) $(srcdir)/clprogs.vc $@

EXTRA_DIST = compile.bat \
	clprogs.vc \
	hexndefs.vc \
	svprogs.vc \
	cgame/MenuChoice_SpanDrawing.vc \
	cgame/MenuChoice_LoadGame.vc \
	cgame/MenuChoice_MouseLook.vc \
	cgame/MenuScreenScreenResolution.vc \
	cgame/MenuChoice_InvertMouse.vc \
	cgame/MenuStaticAnim.vc \
	cgame/MenuChoice_JoinAt.vc \
	cgame/MenuScreenSList.vc \
	cgame/MenuScreenEpisode.vc \
	cgame/MenuChoice_CDMusic.vc \
	cgame/MenuFighterBox.vc \
	cgame/MenuChoice_Help.vc \
	cgame/MenuChoice_GoToConsole.vc \
	cgame/MenuChoice_NewNetGame.vc \
	cgame/MenuChoice_Options.vc \
	cgame/MenuScreen.vc \
	cgame/classes.vc \
	cgame/MenuChoice_MouseYSensitivity.vc \
	cgame/MenuObject.vc \
	cgame/MenuSelector_SmallRight.vc \
	cgame/MenuChoice_TimeLimit.vc \
	cgame/MenuScreenMultiplayer.vc \
	cgame/FinaleScreen.vc \
	cgame/MenuChoice_SaveSlot.vc \
	cgame/MenuChoice_Cleric.vc \
	cgame/MenuChoice_Windowed.vc \
	cgame/MenuChoice_SoundSettings.vc \
	cgame/MenuChoice_Mage.vc \
	cgame/MenuSelector_SmallLeft.vc \
	cgame/MenuChoice_Croshair.vc \
	cgame/MenuChoice_QuitGame.vc \
	cgame/MenuTitleText.vc \
	cgame/MenuChoice_PlayerSetup.vc \
	cgame/MenuChoice_DarkenLights.vc \
	cgame/MenuMainAnim.vc \
	cgame/MenuMainTitleImage.vc \
	cgame/MenuScreenJoinGame.vc \
	cgame/MenuChoice_LoadSlot.vc \
	cgame/MenuScreenOptions.vc \
	cgame/MenuChoice_VideoOptions.vc \
	cgame/MenuChoice_Controls2.vc \
	cgame/MenuScreenControls.vc \
	cgame/MenuScreenSoundOptions.vc \
	cgame/MenuScreenClass.vc \
	cgame/MenuChoice_SwapStereo.vc \
	cgame/MenuChoice_PlayerName.vc \
	cgame/MenuInputLine.vc \
	cgame/MenuChoice_ScreenResolution.vc \
	cgame/MenuChoice_DynamicLights.vc \
	cgame/MenuSpriteAnim.vc \
	cgame/MenuChoice_DeathMatch.vc \
	cgame/MenuScreenFighterSkill.vc \
	cgame/MenuScreenPlayerSetup.vc \
	cgame/MenuChoice_Level.vc \
	cgame/ClientGame.vc \
	cgame/MenuChoice_Monsters.vc \
	cgame/MenuStaticBitmap.vc \
	cgame/MenuChoice_MPSkill.vc \
	cgame/MenuHelpPage.vc \
	cgame/MenuScreenControls2.vc \
	cgame/MenuScreenSaveGame.vc \
	cgame/MenuChoice_Skill.vc \
	cgame/MenuChoice_GLBlendSprites.vc \
	cgame/MenuChoice_Players.vc \
	cgame/MenuChoiceSlider.vc \
	cgame/TitleScreen.vc \
	cgame/MenuScreenSinglePlayer.vc \
	cgame/MenuChoice_NewGame.vc \
	cgame/MenuScreenClericSkill.vc \
	cgame/MenuChoice_PClass.vc \
	cgame/MenuSaveSlot.vc \
	cgame/MenuScreenMouseOptions.vc \
	cgame/MenuChoice_Lookspring.vc \
	cgame/MenuChoice_StartGame.vc \
	cgame/MenuBigTextButton.vc \
	cgame/MenuChoice_JoinGame.vc \
	cgame/MenuChoice_D3DBlendSprites.vc \
	cgame/MenuSList.vc \
	cgame/MenuChoice_MouseXSensitivity.vc \
	cgame/MenuChoice_ApplyVidMode.vc \
	cgame/MenuScreenMageSkill.vc \
	cgame/MenuScreenLoadGame.vc \
	cgame/MenuSmallTextButton.vc \
	cgame/MenuClericBox.vc \
	cgame/MenuSelector_BigArrow.vc \
	cgame/MenuChoice_Controls.vc \
	cgame/MenuChoice_BitDepth.vc \
	cgame/MenuChoice_Search.vc \
	cgame/MenuChoiceEnum.vc \
	cgame/MenuClericWalk.vc \
	cgame/MenuChoice_OnOff.vc \
	cgame/MenuChoice_Brightness.vc \
	cgame/MenuChoice_ExtraSamples.vc \
	cgame/MenuMageBox.vc \
	cgame/MenuChoice_LookStrafe.vc \
	cgame/StatusBarScreen.vc \
	cgame/MenuChoice_ScreenSize.vc \
	cgame/MenuScreenMain.vc \
	cgame/MenuChoice_VideoMode.vc \
	cgame/MenuChoiceEpisode.vc \
	cgame/MenuMageWalk.vc \
	cgame/MenuScreenHelp.vc \
	cgame/MenuControlKey.vc \
	cgame/MenuChoice_SoundVolume.vc \
	cgame/MenuChoice.vc \
	cgame/MenuScreenNewNetGame.vc \
	cgame/IntermissionScreen.vc \
	cgame/MenuChoice_SinglePlayer.vc \
	cgame/MenuChoice_SaveGame.vc \
	cgame/MenuChoice_Fighter.vc \
	cgame/MenuFighterWalk.vc \
	cgame/MenuChoice_MouseOptions.vc \
	cgame/MenuChoice_EndGame.vc \
	cgame/MenuChoice_Darkening.vc \
	cgame/MenuChoice_Colour.vc \
	cgame/MenuTextButton.vc \
	cgame/MenuChoice_D3DTextureFilter.vc \
	cgame/MenuChoice_Multiplayer.vc \
	cgame/MenuChoice_MusicVolume.vc \
	cgame/MenuScreenVideoOptions.vc \
	cgame/MenuChoice_ColouredLights.vc \
	cgame/MenuChoice_ClipLights.vc \
	cgame/MenuChoice_SpriteOffset.vc \
	cgame/MenuChoice_SpriteDelta.vc \
	cgame/MenuChoice_GLSpecular.vc \
	cgame/MenuChoice_AddLights.vc \
	cgame/MenuChoice_GLTextureFilter.vc \
	cgame/MenuChoice_GLModelLights.vc \
	cgame/MenuChoice_ViewModels.vc \
	cgame/MenuChoice_CroshairTrans.vc \
	cgame/MenuScreenAdvancedVideoOptions.vc \
	cgame/MenuChoice_SpecularLevel.vc \
	cgame/MenuChoice_D3DDither.vc \
	cgame/MenuChoice_AdvancedVideoOptions.vc \
	cgame/MenuChoice_AspectRatio.vc \
	cgame/MenuChoice_D3DSpecular.vc \
	cgame/MenuChoice_HiResTextures.vc \
	cgame/MenuChoice_ExternalMusic.vc \
	cgame/MenuChoice_Models.vc \
	cgame/MenuChoice_DrawFPS.vc \
	cgame/MenuChoice_D3DModelLights.vc \
	game/ArtifactHealRadius.vc \
	game/TreeDestructible.vc \
	game/ZShroomSmall3.vc \
	game/PlayerCleric.vc \
	game/Armor.vc \
	game/Actor.vc \
	game/ZStatueGargoyleBlueTall.vc \
	game/WeaponCHolyPiece3.vc \
	game/TeleportOtherFX5.vc \
	game/Sorcerer.vc \
	game/Dirt4.vc \
	game/Demon.vc \
	game/TeleportFog.vc \
	game/ItemKey5.vc \
	game/ArtifactPuzzleGear.vc \
	game/StaticLightSource.vc \
	game/Demon2Chunk4.vc \
	game/ZArmorChunk.vc \
	game/BatSpawner.vc \
	game/LightningMissile.vc \
	game/CircleFlame.vc \
	game/ItemManaGreen.vc \
	game/EttinMace.vc \
	game/ZRock1.vc \
	game/FireDemonRock2.vc \
	game/StainedGlassShard9.vc \
	game/ArtifactTeleport.vc \
	game/DemonChunk1.vc \
	game/SludgeChunk.vc \
	game/Rock2.vc \
	game/ItemArmor1.vc \
	game/ZRockBrown1.vc \
	game/ZTombStoneShane.vc \
	game/LightningFloor.vc \
	game/ZTreeLarge2.vc \
	game/CentaurMissile.vc \
	game/FireDemonSplotch2.vc \
	game/FireDemon.vc \
	game/TeleSmoke.vc \
	game/ItemManaCombined.vc \
	game/FogPatchMedium.vc \
	game/ClassBoss.vc \
	game/ZChainEndSpike.vc \
	game/ZStumpSwamp2.vc \
	game/classes.vc \
	game/PoisonCloud.vc \
	game/ZShroomLarge2.vc \
	game/ArtifactPuzzleMWeapon.vc \
	game/SoundWind.vc \
	game/Pawn.vc \
	game/ZStalagmiteIceSmall.vc \
	game/Projectile.vc \
	game/IceGuy.vc \
	game/ZStumpBurned.vc \
	game/FlameSmallTemp.vc \
	game/ZSwampVine.vc \
	game/KoraxSpirit5.vc \
	game/PotteryBit.vc \
	game/ZChainEndHook2.vc \
	game/QuakeFocus.vc \
	game/TableShit7.vc \
	game/ArtifactPuzzleGemBlue2.vc \
	game/WeaponFSwordPiece2.vc \
	game/IceGuyWisp2.vc \
	game/CentaurLeader.vc \
	game/FireThing.vc \
	game/TableShit10.vc \
	game/ArtifactFlechette.vc \
	game/WeaponMStaffPiece3.vc \
	game/SerpentGib2.vc \
	game/Korax.vc \
	game/Bishop.vc \
	game/ArtifactPuzzleFWeapon.vc \
	game/StainedGlassShard4.vc \
	game/ZRubble3.vc \
	game/ArtifactPuzzleGear3.vc \
	game/SnoutPuff.vc \
	game/MainGameInfo.vc \
	game/WeaponFighterHammer.vc \
	game/SoundWaterfall.vc \
	game/MageStaffFX.vc \
	game/ArtifactPuzzleBook2.vc \
	game/ZCorpseLynched.vc \
	game/LavaSplash.vc \
	game/FireDemonMissile.vc \
	game/Blood.vc \
	game/TableShit2.vc \
	game/BloodySkull.vc \
	game/ClericFlameFloor.vc \
	game/Pig.vc \
	game/Carcas.vc \
	game/Dirt5.vc \
	game/ZStalactiteIceMedium.vc \
	game/BurnableTree.vc \
	game/IceChunkHead.vc \
	game/HexenLevelInfo.vc \
	game/ZShroomSmall4.vc \
	game/WraithFleshDrip1.vc \
	game/FogPatchSmall.vc \
	game/ZTWinedTorch.vc \
	game/FireBomb.vc \
	game/Player.vc \
	game/Effect.vc \
	game/ItemKey6.vc \
	game/ZBannerTattered.vc \
	game/ZStatueGargoyleDarkRedShort.vc \
	game/ArtifactInvulnerability.vc \
	game/WeaponFighterAxe.vc \
	game/WeaponCFlame.vc \
	game/Demon2Chunk5.vc \
	game/ArtifactSuperHeal.vc \
	game/Pottery1.vc \
	game/Mana.vc \
	game/ZTombStoneSmallCross.vc \
	game/FireDemonRock3.vc \
	game/ZRock2.vc \
	game/ClericStaffMissile.vc \
	game/WeaponMCone.vc \
	game/LightningCeiling.vc \
	game/DemonChunk2.vc \
	game/ZStalagmiteIceLarge.vc \
	game/TeleportOtherFX1.vc \
	game/Rock3.vc \
	game/ZStalagmiteMedium.vc \
	game/ItemArmor2.vc \
	game/ZRockBrown2.vc \
	game/ArtifactPuzzleSkull.vc \
	game/ZCorpseSitting.vc \
	game/FlamePuff2.vc \
	game/BridgeBall.vc \
	game/ZChandelier.vc \
	game/ItemKey1.vc \
	game/StaticRGBLightSource.vc \
	game/ZStalactiteMedium.vc \
	game/Weapon.vc \
	game/ZTree.vc \
	game/HammerPuff.vc \
	game/ItemHealingBottle.vc \
	game/ZShroomLarge3.vc \
	game/MageBoss.vc \
	game/ArtifactPuzzleGemGreen1.vc \
	game/WeaponFighterPunch.vc \
	game/ZChandelierUnlit.vc \
	game/KoraxSpirit6.vc \
	game/Arrow.vc \
	game/TableShit8.vc \
	game/WeaponFSwordPiece3.vc \
	game/ItemKeyA.vc \
	game/BishopBlur.vc \
	game/ZStalagmiteIceTiny.vc \
	game/ArtifactTeleportOther.vc \
	game/SorcererBall.vc \
	game/CentaurSword.vc \
	game/PoisonBag.vc \
	game/ArtifactPuzzleGemBig.vc \
	game/ZTreeSwamp1.vc \
	game/Demon2.vc \
	game/ZSuitOfArmor.vc \
	game/SerpentGib3.vc \
	game/Artifact.vc \
	game/MinotaurFloorFire1.vc \
	game/CorpseHanging.vc \
	game/StainedGlassShard5.vc \
	game/WeaponFHammer.vc \
	game/ArtifactPuzzleGear4.vc \
	game/DragonFX2.vc \
	game/AxeBlood.vc \
	game/WeaponMageWand.vc \
	game/KoraxSpirit1.vc \
	game/WeaponMageStaff.vc \
	game/TableShit3.vc \
	game/Fragment.vc \
	game/BishopPuff.vc \
	game/ZBucket.vc \
	game/ZStatueGargoyleDarkRedTall.vc \
	game/FogPatchLarge.vc \
	game/ZStatueGargoyleTanTall.vc \
	game/SorcererFX3Explosion.vc \
	game/WraithFleshDrip2.vc \
	game/PointPuller.vc \
	game/MageStaffFX2.vc \
	game/ZShroomSmall5.vc \
	game/IceChunk.vc \
	game/Dirt6.vc \
	game/StainedGlassShard0.vc \
	game/ArtifactEgg.vc \
	game/MinotaurSmokeExit.vc \
	game/DemonMissile.vc \
	game/ZTombStoneBigCross.vc \
	game/WeaponMageCone.vc \
	game/ZStalagmitePillar.vc \
	game/ArtifactBoostMana.vc \
	game/CentaurShield.vc \
	game/ItemKey7.vc \
	game/ZChainEndHearth.vc \
	game/ThrustFloorUp.vc \
	game/WeaponClericHoly.vc \
	game/ThrowingBomb.vc \
	game/ZLeafSpawner.vc \
	game/SorcererFX1.vc \
	game/ArtifactFly.vc \
	game/FlamePuff.vc \
	game/ArtifactPuzzleCWeapon.vc \
	game/FireDemonRock4.vc \
	game/ZRock3.vc \
	game/DemonChunk3.vc \
	game/TeleportOtherFX2.vc \
	game/ItemArmor3.vc \
	game/MapSpot.vc \
	game/Dirt1.vc \
	game/Ettin.vc \
	game/MinotaurMissile.vc \
	game/Bat.vc \
	game/ArtifactPuzzle.vc \
	game/ZRockBlack.vc \
	game/ZMossCeiling1.vc \
	game/ItemKey2.vc \
	game/WraithBuried.vc \
	game/Dart.vc \
	game/PlayerPig.vc \
	game/ZStumpBare.vc \
	game/Minotaur.vc \
	game/ZBell.vc \
	game/FighterSwordMissile.vc \
	game/Demon2Chunk1.vc \
	game/HolyMissile.vc \
	game/BotPlayer.vc \
	game/SerpentHead.vc \
	game/ZStalactiteIceSmall.vc \
	game/BishopPainBlur.vc \
	game/TableShit9.vc \
	game/ItemKeyB.vc \
	game/CentaurMash.vc \
	game/FlameSmall.vc \
	game/ZStalactiteIceTiny.vc \
	game/BloodSplatter.vc \
	game/ZCorpseLynchedNoHeart.vc \
	game/MinotaurFloorFire2.vc \
	game/WeaponClericFire.vc \
	game/MageWandSmoke.vc \
	game/ArtifactTorch.vc \
	game/ZTreeSwamp2.vc \
	game/Decoration.vc \
	game/Pottery2.vc \
	game/ZTombStoneBrianP.vc \
	game/EggMissile.vc \
	game/ZPoisonShroom.vc \
	game/StainedGlassShard6.vc \
	game/ZWallTorch.vc \
	game/Dirt2.vc \
	game/ZStatueGargoyleStripeTall.vc \
	game/ClericFlameMissile.vc \
	game/AxePuff.vc \
	game/ZShrub1.vc \
	game/ZChainEndSkull.vc \
	game/KoraxSpirit2.vc \
	game/ItemManaBlue.vc \
	game/DirtClump.vc \
	game/ZTreeDead.vc \
	game/ArtifactPuzzleGemGreen2.vc \
	game/TableShit4.vc \
	game/BrassTorch.vc \
	game/Dirt3.vc \
	game/FogSpawner.vc \
	game/ZVasePillar.vc \
	game/WraithFX3.vc \
	game/BloodPool.vc \
	game/Leaf1.vc \
	game/ZStatueGargoyleBlueShort.vc \
	game/StainedGlassShard1.vc \
	game/Key.vc \
	game/Pickup.vc \
	game/ZStalagmiteIceMedium.vc \
	game/IceGuyMissilePuff.vc \
	game/AxePuffGlow.vc \
	game/PunchPuff.vc \
	game/LightningZap.vc \
	game/ItemKey8.vc \
	game/HammerMissile.vc \
	game/SorcererBall1.vc \
	game/SorcererFX2.vc \
	game/MinotaurFloorFire.vc \
	game/ZStatueGargoyleRedShort.vc \
	game/FighterSwordFlame.vc \
	game/ZTreeGnarled1.vc \
	game/HolyFX.vc \
	game/Dragon.vc \
	game/IceGuyMissile.vc \
	game/DemonMash.vc \
	game/ZShroomSmall1.vc \
	game/ZStalactiteIceLarge.vc \
	game/FireDemonRock5.vc \
	game/ZRock4.vc \
	game/DemonChunk4.vc \
	game/Leaf2.vc \
	game/ZStatueGargoyleTanShort.vc \
	game/FighterBoss.vc \
	game/WeaponCHolyPiece1.vc \
	game/ZStalactiteSmall.vc \
	game/TeleportOtherFX3.vc \
	game/PlayerPawn.vc \
	game/BlastEffect.vc \
	game/Bridge.vc \
	game/ItemArmor4.vc \
	game/ThrustFloorDown.vc \
	game/ZStatueGargoyleGreenTall.vc \
	game/ArtifactSpeedBoots.vc \
	game/BloodSplash.vc \
	game/KoraxBolt.vc \
	game/Centaur.vc \
	game/ZStatueGargoyleRustShort.vc \
	game/ZMossCeiling2.vc \
	game/CorpseBit.vc \
	game/ItemKey3.vc \
	game/EttinMash.vc \
	game/SludgeSplash.vc \
	game/Demon2Chunk2.vc \
	game/FlameLarge.vc \
	game/ZRubble1.vc \
	game/FireBall1.vc \
	game/MageWandPuff.vc \
	game/ArtifactHealthFlask.vc \
	game/ClericStaffPuff.vc \
	game/WeaponMLightning.vc \
	game/ZFireBullUnlit.vc \
	game/ZCorpseSleeping.vc \
	game/BishopMissile.vc \
	game/ZIronMaiden.vc \
	game/ZChainBit32.vc \
	game/WeaponCSerpentStaff.vc \
	game/WeaponFighterSword.vc \
	game/LavaSmoke.vc \
	game/WeaponPigSnout.vc \
	game/ZXmasTree.vc \
	game/ZStatueGargoyleRustTall.vc \
	game/TeleportSpot2.vc \
	game/Pottery3.vc \
	game/StainedGlassShard7.vc \
	game/FogPatch.vc \
	game/ClericBoss.vc \
	game/MinotaurSmoke.vc \
	game/LavaInflictor.vc \
	game/WeaponClericStaff.vc \
	game/ZShrub2.vc \
	game/KoraxSpirit3.vc \
	game/CorpseBloodDrip.vc \
	game/TableShit5.vc \
	game/Demon2Chunk3.vc \
	game/Demon2Missile.vc \
	game/FlameLargeTemp.vc \
	game/PointPusher.vc \
	game/DemonChunk5.vc \
	game/ArtifactBlastRadius.vc \
	game/WeaponMStaffPiece1.vc \
	game/MapSpotGravity.vc \
	game/SorcererSpark.vc \
	game/PlayerMage.vc \
	game/StainedGlassShard2.vc \
	game/DragonMissile.vc \
	game/ShardMissile.vc \
	game/HolyPuff.vc \
	game/Rock1.vc \
	game/ArtifactBoostArmor.vc \
	game/FireDemonRock1.vc \
	game/FireDemonSplotch1.vc \
	game/ZStatueGargoyleGreenShort.vc \
	game/ArtifactPuzzleGemRed.vc \
	game/HolyTail.vc \
	game/Demon2Mash.vc \
	game/ZWingedStatue.vc \
	game/ZFireBull.vc \
	game/ItemKey9.vc \
	game/IceGuyBit.vc \
	game/ArtifactSummonMaulator.vc \
	game/IceShard.vc \
	game/SorcererBall2.vc \
	game/ZStalactiteLarge.vc \
	game/PlayerFighter.vc \
	game/SorcererFX3.vc \
	game/WeaponMageLightning.vc \
	game/SerpentMissile.vc \
	game/ZTreeGnarled2.vc \
	game/ZShroomSmall2.vc \
	game/PlayerSpeed.vc \
	game/ZCauldronUnlit.vc \
	game/ZStalagmiteSmall.vc \
	game/IceGuyWisp1.vc \
	game/WeaponCHolyPiece2.vc \
	game/ItemKey4.vc \
	game/TeleportOtherFX4.vc \
	game/ZChainBit64.vc \
	game/ZLog.vc \
	game/Serpent.vc \
	game/IceGuyMissile2.vc \
	game/HolyMissilePuff.vc \
	game/WaterDrip.vc \
	game/WeaponClericMace.vc \
	game/Wraith.vc \
	game/SummonMissile.vc \
	game/ZStatueGargoyleRedTall.vc \
	game/ZWallTorchUnlit.vc \
	game/MageWandMissile.vc \
	game/SorcererFX2_T1.vc \
	game/PoisonDart.vc \
	game/ZTombStoneRip.vc \
	game/ZBarrel.vc \
	game/Gibs.vc \
	game/WraithMissile.vc \
	game/ZCorpseKabob.vc \
	game/ZCandle.vc \
	game/ZTreeLarge1.vc \
	game/ProjectileBlade.vc \
	game/RipperBall.vc \
	game/TeleportSpot3.vc \
	game/SerpentGib1.vc \
	game/SorcererBall3.vc \
	game/ZBlueCandle.vc \
	game/ZStumpSwamp1.vc \
	game/StainedGlassShard8.vc \
	game/TableShit1.vc \
	game/SerpentLeader.vc \
	game/ZShroomLarge1.vc \
	game/WraithSparkDrip.vc \
	game/KoraxSpirit4.vc \
	game/ZCauldron.vc \
	game/ArtifactPuzzleSkull2.vc \
	game/ZTombStoneBrianR.vc \
	game/ZChainEndHook1.vc \
	game/TeleportSpot.vc \
	game/TableShit6.vc \
	game/ZRubble2.vc \
	game/WeaponFSwordPiece1.vc \
	game/ZWingedStatueNoSkull.vc \
	game/SorcererFX4.vc \
	game/WeaponFAxe.vc \
	game/WeaponMStaffPiece2.vc \
	game/ZGemPedestal.vc \
	game/WaterSplash.vc \
	game/StainedGlassShard3.vc \
	game/ZStalagmiteLarge.vc \
	game/ZTombStoneCrossCircle.vc \
	game/BloodSplashBase.vc \
	game/WaterSplashBase.vc \
	game/SlimeChunk.vc \
	game/ArtifactPuzzleGemBlue1.vc \
	game/ArtifactPuzzleGear2.vc \
	game/SlimeSplash.vc \
	game/HexenWorldInfo.vc \
	game/ArtifactPuzzleBook1.vc \
	game/WeaponPiece.vc \
	game/ZTWinedTorchUnlit.vc \
	game/SoundSequence.vc \
	game/WeaponPickup.vc \
	game/SoundSequenceSlot.vc
